@@ -17,3 +17,6 @@ except:
                                                     'Bitten-Slave').version
     except:
         pass
+
+# The master-slave protocol/configuration version
+PROTOCOL_VERSION = 2
